# user-service

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  yoyo.ini
app/: __init__.py
app/configuration/: __init__.py  logger.py  server.py
app/internal/pkg/middlewares/: handle_http_exceptions.py  validation.py
app/internal/repository/: __init__.py  base.py
app/internal/repository/postgresql/: __init__.py  connection.py  users.py
app/internal/routes/: __init__.py  healthcheck.py  users.py
app/internal/services/: __init__.py  users.py
app/pkg/connectors/: __init__.py  base.py  postgresql.py
app/pkg/handlers/: __init__.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/models/: __init__.py
app/pkg/models/app/: __init__.py  healthcheck.py  orders.py  users.py
app/pkg/models/base/: __init__.py  enum.py  exception.py  model.py
app/pkg/models/core/: __init__.py  containers.py  routes.py
app/pkg/models/exceptions/: __init__.py  users.py  validation.py
app/pkg/settings/: settings.py
docker/api/: Dockerfile
docker/migrations/: Dockerfile
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/dashboards/Logs/: loki.json
grafana/provisioning/datasources/: loki.yaml
loki/: config.yaml
migrations/: 20241202_01_saMXz-create-order-table.py
scripts/: migrate.py  start.sh
tests/: conftest.py
tests/fixtures/: settings.py
tests/fixtures/models/: controller.py  generators.py
vector/: vector.yaml
(+11 files in other folders)
